07-idempotence/k8s/20-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: order
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: klwxsrx/arch-course-labs-07-order-service
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
