07-idempotence/k8s/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: order
  name: order
spec:
  selector:
    app: order
  ports:
    - port: 8080
      targetPort: web
